--- a/package.json
+++ b/package.json
@@ -17,5 +17,20 @@
     "hyperdev",
     "express"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hckia/blog-api-modular-with-tests.git"
+  },
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/hckia/blog-api-modular-with-tests/issues"
+  },
+  "homepage": "https://github.com/hckia/blog-api-modular-with-tests#readme",
+  "devDependencies": {
+    "mocha": "^5.0.4"
+  }
 }
